[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Planets.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Planets" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -32.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 54.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
